# GPESolver

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  original_solver.f  rewritten_original_solver.f90
fort_solver/: CMakeLists.txt  fft_solver.f90  main.f90  original_solver.f
lib/: CMakeLists.txt
plotters/: energy.gp  evolution.gp  plot.gp
plotters/gnuplot/: energy.gp  energy_grid.gp  evolution.gp  phase.gp  phase_eps140.gp  phase_eps145.gp  phase_eps15.gp  phase_eps150_asymetric.gp  phase_single_well.gp  plot.gp  time_evo.gp
plotters/jl/: animate.jl  context.jl  epsilon.jl  files.jl  grid_energies.jl  initial_states.jl  joining_main.jl  main.jl  many_plots.jl  moving_droplets.jl  phase_diagram.jl  plots.jl  potential.jl  slices.jl  units.jl
solver/: CMakeLists.txt
solver/include/: basic.hpp  context.hpp  fft_context.hpp  fft_poisson_solver.hpp  fft_rt_split_solver.hpp  file_manager.hpp  mesh.hpp  numerical_params.hpp  output.hpp  params.hpp  poisson_solver.hpp  solver.hpp  units.hpp
solver/src/: fft_context.cpp  fft_poisson_solver.cpp  fft_rt_split_solver.cpp  file_manager.cpp  params.cpp  poisson_solver.cpp  solver.cpp  units.cpp
src/: CMakeLists.txt
src/context/: context.cpp  context.hpp
src/filemanager/: file_manager.cpp  file_manager.hpp
src/initializer/: initializer.cpp  initializer.hpp
src/manager/: sim_manager.cpp  sim_manager.hpp  sim_mediator.hpp
src/parameters/: complex_param.hpp  parameters.cpp  parameters.hpp  potentials.hpp
src/solver/: cpu_solver.cpp  cpu_solver.hpp  cuda_kernels.cu  cuda_kernels.hpp  fft_context.cpp  fft_context.hpp  fft_poisson_solver.cpp  fft_poisson_solver.hpp  fft_rt_split_solver.cpp  fft_rt_split_solver.hpp  gpu_solver.cpp  gpu_solver.hpp  numerical_params.hpp  solver.cpp  solver.hpp  solver_factory.hpp  solver_manager.cpp  solver_manager.hpp
src/solver/cpu_solver/: cpu_solver.cpp  cpu_solver.hpp
src/solver/cuda_solver/: cuda_kernels.cu  cuda_kernels.hpp  gpu_solver.cpp  gpu_solver.hpp
src/solver/fft_solvers/: abstract_poisson_solver.hpp  abstract_split_solver.hpp  fft_context.cpp  fft_context.hpp  fft_export.hpp
src/solver/fft_solvers/cpu/: fftw_abstract_cpu_solver.hpp  fftw_poisson_solver.cpp  fftw_poisson_solver.hpp  fftw_split_solver.cpp  fftw_split_solver.hpp
src/solver/fft_solvers/gpu/: cuda_fft_kernels.cu  cuda_fft_kernels.hpp  cufft_abstract_gpu_solver.hpp  cufft_poisson_solver.cpp  cufft_poisson_solver.hpp  cufft_split_solver.cpp  cufft_split_solver.hpp
src/solver/solver_data/: cpu_solver_data.hpp  gpu_solver_data.hpp  isolver_data.hpp
src/utils/: CMakeLists.txt
src/utils/output/: CMakeLists.txt
src/utils/types/mat3d/: abstract_mat3d.hpp  gpu_3d_array.hpp  mat3d.hpp  stdmat3d.hpp
src/utils/units/: units.cpp  units.hpp
tests/: CMakeLists.txt
tests/filemanager/: file_manager_test.cpp
tests/utils/types/: gpu_3d_array_test.cpp
utils/: CMakeLists.txt
utils/types/: CMakeLists.txt
utils/types/mat3d/: stdmat3d.hpp
utils/units/: CMakeLists.txt  units.cpp  units.hpp
